--- a/Outros/css/Aula13.css
+++ b/Outros/css/Aula13.css
@@ -1,8 +1,17 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
     background-color: bisque;
     font-family: Arial, Helvetica, sans-serif;
     color: #333;
-    margin: 0%;
+}
+.container{
+    background-color: bisque;
+    width: 100%;
+    margin: 0 auto; /*centraliza o conteudo horizontalmente*/
 }
 /* Estilo para nosso cabeçalho */
 
@@ -56,12 +65,14 @@ header nav li a:hover{
 .banner h2{
     font-size: 48px;
     color: white;
+    margin: 20px;
     /* Contorno preto */
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .banner p{
     font-size: 20px;
+    margin: 25px;
     color: white;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
@@ -102,6 +113,11 @@ header nav li a:hover{
     box-shadow: #333;
 }
 
+.card:hover{
+    /*Aumenta o tamanho do card em 10% ao passar o mouse*/
+    transform: scale(1.10);
+}
+
 .card img{
     width: 100%;
     height: 200px;
@@ -135,4 +151,56 @@ footer{
 
 footer p{
     font-size: 24px;
+}
+.close-btn{
+    color: #333;
+    float: right;
+    font-size: 28px;
+    cursor: pointer;
+}
+.close-btn:hover{
+    color: red;
+}
+.modal{
+    display: none;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.85);
+    position: fixed; /*fixe o modal na tela*/
+    top: 0;
+}
+.modal form{
+    display: flex;
+    flex-direction: column;
+}
+.modal-content{
+    /*cor de fundo*/
+    background-color: bisque;
+    /*centraliza o conteudo horizontalmente*/
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 400px;
+}
+.modal form label{
+    margin: 10px;
+    font-size: 16px;
+}
+.modal form input{
+    padding: 10px;
+    margin: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+.modal form .btn{
+    background-color: #ff6347;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.modal form .btn:hover{
+    background-color: #e5533d;
 }
